--- a/index.html
+++ b/index.html
@@ -202,37 +202,37 @@
                <div class="col-md-4"> 
                   <div class="full product_blog margin_top_30">
                      <img src="images/rossy earrings.avif" alt="#" />
-                     <h3><span style="color: #b97555eb !important;">starting from $199</span> Earrings</h3>
+                     <h3><span style="color: #b97555eb !important;">Earrings</span> starting from $199</h3>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="full product_blog margin_top_30">
                      <img src="images/neck-rossy.webp" alt="#" />
-                     <h3><span style="color: #b97555eb !important;">starting from $299</span> Necklaces</h3>
+                     <h3><span style="color: #b97555eb !important;">Necklaces</span> starting from $299</h3>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="full product_blog margin_top_30">
                      <img src="images/brace-rossy.jpg" alt="#" />
-                     <h3><span style="color: #b97555eb !important;">starting from $299</span> Bracelets</h3>
+                     <h3><span style="color: #b97555eb !important;">Bracelet</span> starting from $299</h3>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="full product_blog margin_top_30">
                      <img src="images/weddingr-rossy.jpg" alt="#" />
-                     <h3><span style="color: #b97555eb !important;">starting from $499</span>Wedding Rings</h3>
+                     <h3><span style="color: #b97555eb !important;">Wedding Rings</span> starting from $499 </h3>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="full product_blog margin_top_30">
                      <img src="images/rossy-watches2.jpg" alt="#" />
-                     <h3><span style="color: #b97555eb !important;">starting from $699</span> Watches</h3>
+                     <h3><span style="color: #b97555eb !important;">Watches</span> starting from $699</h3>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="full product_blog margin_top_30">
                      <img src="images/engagement-rossy.jpg" alt="#" />
-                     <h3><span style="color: #b97555eb !important;">starting from $399</span> Engagement Rings</h3>
+                     <h3><span style="color: #b97555eb !important;">Engagement Rings</span> starting from $399 </h3>
                   </div>
                </div>
             </div>
